--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,13 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
+*/node_modules
 dist
 dist-ssr
 *.local
+*/.env
+.turbo
+**/.prisma
 
 # Editor directories and files
 .vscode/*
