--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "src/app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server",
+    "start": "node src/app",
     "dev": "nodemon src/app",
     "deploy": "nodemon src/app",
     "versel-build": "echo hello"
