--- a/turbo.json
+++ b/turbo.json
@@ -11,6 +11,9 @@
     "dev": {
       "cache": false,
       "persistent": true
+    },
+    "build": {
+      "dependsOn": ["^build"]
     }
   }
 }
