--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "database": "file:../database"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
