--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "turbo run dev",
     "deploy": "turbo run deploy",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cd frontend && npm run build"
+    "build": "turbo run build"
   },
   "author": "",
   "license": "ISC",
