--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/app",
-    "dev": "nodemon src/app",
+    "dev": "yarn run dotenv -e .env -- nodemon src/app",
     "deploy": "nodemon src/app",
     "versel-build": "echo hello"
   },
@@ -16,7 +16,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "ts-node": "^10.9.2",
-    "database": "file:../database"
+    "database": "workspace:*"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
