--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "database": "file:../database"
+    "database": "workspace:*"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
