--- a/database/package.json
+++ b/database/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx prisma generate"
+    "build": "yarn -T run pnpify prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^5.13.0",
