--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "dev": "yarn run dotenv -e .env -- vite",
+    "build": "yarn run dotenv -e .env -- tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -13,7 +13,9 @@
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "database": "workspace:*"
+    "database": "workspace:*",
+    "dotenv": "^16.4.5",
+    "dotenv-cli": "^7.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
