--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "start": "node src/app",
     "dev": "yarn run dotenv -e .env -- nodemon src/app",
     "deploy": "nodemon src/app",
-    "versel-build": "echo hello"
+    "db:build": "cd ../database && yarn run build"
+
   },
   "keywords": [],
   "author": "",
