--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -3,6 +3,7 @@
     {
       "source": "/api/:path*",
       "destination": "https://personal-website-backend-two.vercel.app/api/:path*"
-    }
+    },
+    {"source": "/(.*)", "destination": "/"}
   ]
 }
