--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "deploy": "turbo run deploy",
     "build:database": "cd database && yarn run build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "turbo run build --force"
+    "build": "turbo run build --force",
+    "migrate": "cd database && prisma migrate dev"
   },
   "author": "mtwilkinson <122630959+mtwilkinson@users.noreply.github.com>",
   "license": "ISC",
